force-app/main/default/objects/MPTerminationRecord__c/MPTerminationRecord__c.object-meta.xml
<CustomObject>
    <label>Elemento de Ficha de Término</label>
    <nameField>
        <displayFormat>EFT-{0000}</displayFormat>
        <label>Elemento de Ficha de Término</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elementos de Ficha de Término</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>