force-app/main/default/objects/MPTerminationRecord__c/fields/FTC__c.field-meta.xml
<CustomField>
    <fullName>FTC__c</fullName>
    <label>FTC</label>
    <referenceTo>MPContractTerminationRecords__c</referenceTo>
    <relationshipLabel>Elementos de Ficha de Término</relationshipLabel>
    <relationshipName>MPTerminationRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>