force-app/main/default/objects/MPTerminationRecord__c/fields/MPCategory__c.field-meta.xml
<CustomField>
    <fullName>MPCategory__c</fullName>
    <label>Categoría</label>
    <length>30</length>
    <type>Text</type>
</CustomField>