force-app/main/default/objects/MPTerminationRecord__c/fields/MPDescription__c.field-meta.xml
<CustomField>
    <fullName>MPDescription__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>