force-app/main/default/objects/MPTerminationRecord__c/fields/MPDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentDate__c</fullName>
    <label>Fecha del documento</label>
    <type>Date</type>
</CustomField>