force-app/main/default/objects/MPTerminationRecord__c/fields/MPDocumentDueDate__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentDueDate__c</fullName>
    <label>Fecha de vencimiento del documento</label>
    <type>Date</type>
</CustomField>