force-app/main/default/objects/MPTerminationRecord__c/fields/MPDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentNumber__c</fullName>
    <label>Número de documento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>