force-app/main/default/objects/MPTerminationRecord__c/fields/MPDocumentType__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentType__c</fullName>
    <label>Tipo de documento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>