force-app/main/default/objects/MPTerminationRecord__c/fields/MPItemCode__c.field-meta.xml
<CustomField>
    <fullName>MPItemCode__c</fullName>
    <label>Código de artículo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>