force-app/main/default/objects/MPTerminationRecord__c/fields/MPItemValue__c.field-meta.xml
<CustomField>
    <fullName>MPItemValue__c</fullName>
    <label>Valor de artículo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>