force-app/main/default/objects/MPTerminationRecord__c/fields/MPOperationType__c.field-meta.xml
<CustomField>
    <fullName>MPOperationType__c</fullName>
    <label>Tipo de operación</label>
    <length>8</length>
    <type>Text</type>
</CustomField>