force-app/main/default/objects/MPTerminationRecord__c/fields/MPReferenceDocument__c.field-meta.xml
<CustomField>
    <fullName>MPReferenceDocument__c</fullName>
    <label>Documento de referencia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>