force-app/main/default/objects/MPTerminationRecord__c/fields/MPStatus__c.field-meta.xml
<CustomField>
    <fullName>MPStatus__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Aprobado</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>