force-app/main/default/objects/MPTerminationRecord__c/fields/MPSubcategory__c.field-meta.xml
<CustomField>
    <fullName>MPSubcategory__c</fullName>
    <label>Subcategoría</label>
    <length>30</length>
    <type>Text</type>
</CustomField>